@@ -98,7 +98,7 @@
     <genericsetup:upgradeSteps
       source="1109"
       destination="1110"
-      sortkey="7"
+      sortkey="8"
       profile="vnccollab.theme:default">
 
         <genericsetup:upgradeDepends
@@ -110,9 +110,9 @@
     <genericsetup:upgradeStep
       title="Installs vnccollab.common"
       description="Forces vnccollab.theme.addcontent viewlet visibility"
-      source="1108"
-      destination="1109"
-      sortkey="8"
+      source="1109"
+      destination="1110"
+      sortkey="9"
       handler="vnccollab.theme.upgrades.upgrades.upgrade_1108_1109"
       profile="vnccollab.theme:default"
       />
